--- a/src/pages/Login/Login.modules.scss
+++ b/src/pages/Login/Login.modules.scss
@@ -3,6 +3,7 @@ $text-color: #999999;
 $link-color: #222222;
 $background-hover-color: #91704f;
 
+
 .topbar {
     background-color: rgba(0, 0, 0, .54) !important;
     margin-bottom: 50px;
@@ -22,6 +23,8 @@ $background-hover-color: #91704f;
 .content-login {
     margin: 80px auto;
     max-width: 410px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .login-wrapper {
@@ -39,7 +42,7 @@ $background-hover-color: #91704f;
 }
 
 .login-message .title {
-    font-size: 16px;    
+    font-size: 16px;
     text-transform: uppercase;
     font-weight: 700;
     margin: 0 0 20px;
@@ -68,17 +71,17 @@ $background-hover-color: #91704f;
     border: $background-hover-color;
 }
 
-.p-text{
+.p-text {
     font-size: 14px;
     margin-bottom: 20px;
 }
 
-.link{
+.link {
     font-size: 14px;
     color: $link-color;
 }
 
-.login-guest-wrapper{
+.login-guest-wrapper {
     color: $heading-color;
     text-transform: uppercase;
     font-weight: 300;
@@ -86,11 +89,59 @@ $background-hover-color: #91704f;
     margin: 0 0 20px;
 }
 
-.guest-login-wrapper .title{
+.guest-login-wrapper .title {
     color: $heading-color;
     line-height: 1.4;
     font-weight: 400;
     letter-spacing: 2px;
     margin-bottom: 20px;
     font-size: 20px;
+}
+
+.guest-login-wrapper hr {
+    margin: 60px 0 50px;
+}
+
+//input
+.form-control {
+    height: 4rem !important;
+    font-size: 14px !important;
+    padding-left: 14px !important;
+    padding-right: 14px !important;
+    padding-bottom: 0 !important;
+    color: $text-color !important;
+}
+
+.password {
+    font-size: 16px !important;
+}
+
+//lable
+.form-floating>label {
+    padding-top: 10px !important;
+    padding-bottom: 14px !important;
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+    font-size: 13px !important;
+}
+
+.asterisk {
+    color: red;
+}
+
+.bi-exclamation-circle-fill {
+    color: #EB001B;
+    font-size: 22px;
+}
+
+@media (max-width: 641px) {
+    .content-login {
+        margin: 40px auto;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .guest-login-wrapper hr {
+        margin: 30px 0 30px;
+    }
 }
