--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,4 +1,5 @@
 @import url('normalize.css');
+@import './gridLayout.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import '../../assets/vendors/themify-icons/themify-icons.css';
 
@@ -10,6 +11,7 @@
 
 :root {
   --admin-font-color: #92afd3;
+  --admin-font-color-2: #e2eaf3;
   --admin-border-color: #233a57;
   --admin-font-color-hover: #3b82f6;
   --admin-background-color: #3c82f6;
