--- a/src/components/adminComponents/Input/Input.module.scss
+++ b/src/components/adminComponents/Input/Input.module.scss
@@ -9,10 +9,11 @@
   margin-bottom: 8px;
 }
 
-.input {
+.input,
+.select {
   width: 100%;
   background-color: transparent;
-  border: 0.8px solid rgba($color: #92afd3, $alpha: 0.3);
+  border: 1px solid rgba($color: #233a57, $alpha: 1);
   padding: 8px 16px;
   border-radius: 4px;
   font-size: 1.4rem;
@@ -33,4 +34,111 @@
   font-size: 1.3rem;
   color: var(--admin-font-color);
   margin-top: 4px;
+}
+
+.select {
+  position: relative;
+  user-select: none;
+  cursor: pointer;
+}
+
+.caret-icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.list {
+  position: absolute;
+  left: 0;
+  top: 37px;
+  display: block;
+  width: 100%;
+  border: 1px solid var(--admin-border-color);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+
+  li {
+    padding: 8px 16px;
+    color: #fff;
+    font-size: 1.3rem;
+
+    &:hover {
+      background-color: rgba($color: #e2eaf3, $alpha: 0.1);
+    }
+  }
+}
+
+.none {
+  display: none;
+}
+
+.item-default {
+  color: var(--admin-font-color) !important;
+}
+
+.colors {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  border-radius: 4px;
+  margin-right: 6px;
+  cursor: pointer;
+}
+
+.size-container {
+  color: var(--admin-font-color);
+  display: flex;
+  font-size: 1.2rem;
+
+  .size-item {
+    margin-right: 6px;
+    padding: 0 8px;
+    width: 40px;
+    line-height: 39px;
+    height: 40px;
+    text-align: center;
+    border-radius: 4px;
+    border: 1px solid rgba(146, 175, 211, 0.3);
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .size-item.active {
+    border-color: var(--admin-background-color);
+    color: #fff;
+    background-color: rgba(51, 51, 51, 0.2);
+  }
+}
+
+.sizes {
+  appearance: none;
+}
+
+// image
+.img-container {
+  cursor: pointer;
+}
+
+.img-inner {
+  padding: 20px 0;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--admin-font-color);
+  border: 1px dashed var(--admin-border-color);
+  border-radius: 4px;
+
+  p {
+    font-size: 1.5rem;
+    margin-top: 16px;
+  }
+}
+
+.upload-icon {
+  font-size: 40px;
 }
