--- a/src/components/adminComponents/Input/Input.module.scss
+++ b/src/components/adminComponents/Input/Input.module.scss
@@ -34,6 +34,7 @@
   height: 44px;
   font-size: 1.6rem;
   font-weight: 600;
+  color: #38bdf8;
 }
 
 .hint {
@@ -95,12 +96,21 @@
 
 .colors {
   appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   vertical-align: middle;
   border-radius: 4px;
-  margin-right: 6px;
+  border: 1.5px solid rgba($color: #fff, $alpha: 0);
+  margin-right: 10px;
+  opacity: 0.5;
   cursor: pointer;
+
+  &.active {
+    width: 23.5px;
+    height: 23.5px;
+    margin-right: 8.5px;
+    opacity: 1;
+  }
 }
 
 .size-container {
