--- a/src/pages/Admin/Dashboard/Dashboard.module.scss
+++ b/src/pages/Admin/Dashboard/Dashboard.module.scss
@@ -404,3 +404,37 @@ tbody {
   background-color: rgba($color: #333, $alpha: 0.2);
   color: #fff;
 }
+
+////
+
+.img-preview-container {
+  display: flex;
+  margin-top: 20px;
+}
+
+.input-images {
+  width: 200px;
+  border-radius: 6px;
+  margin-right: 6px;
+}
+
+.image-container {
+  position: relative;
+}
+
+.order-img-icon {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  font-size: 30px;
+  color: var(--admin-bg);
+}
+
+.order-text {
+  position: absolute;
+  top: 8px;
+  left: 15px;
+  color: #000;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
