--- a/src/components/adminComponents/SideModel/SideModel.module.scss
+++ b/src/components/adminComponents/SideModel/SideModel.module.scss
@@ -320,3 +320,35 @@
     transform: translateX(-20px);
   }
 }
+
+// loading...
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  background-color: rgba($color: #000000, $alpha: 0.5);
+}
+
+.icon-loading {
+  font-size: 40px;
+  color: #fff;
+  animation: fadeInOut 1.5s infinite;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
