--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,7 +1,8 @@
 @import url('normalize.css');
 @import './gridLayout.css';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import '../../assets/vendors/themify-icons/themify-icons.css';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yantramanav:wght@100;300;400;500;700;900&display=swap');
 
 * {
   box-sizing: border-box;
@@ -10,6 +11,9 @@
 }
 
 :root {
+  --font-poppins: 'Poppins', sans-serif;
+  --font-yantramanav: 'Yantramanav', sans-serif;
+
   --admin-font-color: #92afd3;
   --admin-font-color-2: #e2eaf3;
   --admin-border-color: #233a57;
@@ -20,21 +24,32 @@
 
   --sidebar-admin-width: 259px;
   --header-admin-height: 70px;
+
+  --header-height: 120px;
 }
 
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
   overflow: auto;
+  background-color: #333;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
+
+  height: 2000px;
 }
 
-// common
+// Common
+.section-1200 {
+  min-width: 1200px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 ._text-center {
   text-align: center !important;
 }
