setup layout header

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -26,6 +26,10 @@
   --header-admin-height: 70px;
 
   --header-height: 120px;
+
+  --rounded-full: 9999px;
+
+  --border-color-outline: #00d1b7;
 }
 
 html {
