--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,5 +1,5 @@
 .search-input {
-  width: 210px;
+  width: 250px;
   line-height: 42px;
   border-radius: var(--rounded-full);
   border: 1px solid #ccc;
@@ -7,8 +7,30 @@
   padding-right: 40px;
   font-family: var(--font-yantramanav);
   letter-spacing: 0.5px;
-  transition: all 0.3s;
+  transition: all 0.5s;
   outline: none;
+  background-color: transparent;
+  border-color: rgba($color: #ccc, $alpha: 0.3);
+  caret-color: #fff;
+  color: #ccc;
+
+  &:focus {
+    border-color: #333;
+    border-color: #ccc;
+  }
+}
+
+.search-input[light] {
+  border: 1px solid #ccc;
+  padding-left: 15px;
+  padding-right: 40px;
+  font-family: var(--font-yantramanav);
+  letter-spacing: 0.5px;
+  transition: all 0.5s;
+  background-color: transparent;
+  caret-color: #333;
+  border-color: rgba($color: #333, $alpha: 0.2);
+  color: #333;
 
   &:focus {
     border-color: #333;
