--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,10 +1,9 @@
 .container {
-  position: sticky;
-  top: 0;
-  left: 0;
-  right: 0;
   background-color: transparent;
+  border-bottom: 1px solid rgba($color: #fff, $alpha: 0.15);
 }
+
+// handle animation
 
 // top-header
 .sub {
@@ -58,8 +57,9 @@
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  background-color: rgba($color: #cccccc, $alpha: 0.2);
+  background-color: rgba($color: #fff, $alpha: 0);
   padding: 0 40px;
+  transition: all 0.5s;
 }
 
 .main[light] {
@@ -69,6 +69,7 @@
   height: 80px;
   background-color: #fff;
   padding: 0 40px;
+  transition: all 0.5s;
 }
 
 nav {
@@ -134,6 +135,14 @@ nav {
 .icon-header {
   font-size: 2.4rem;
   font-weight: 600 !important;
+  color: #fff;
+  line-height: inherit !important;
+  transition: all 0.5s;
+}
+
+.icon-header[light] {
+  color: #000;
+  transition: all 0.5s;
 }
 
 .wishlist {
