--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -147,6 +147,14 @@ body {
   margin-right: 8px;
 }
 
+.ml-8px {
+  margin-left: 8px;
+}
+
+.ml-4px {
+  margin-left: 4px;
+}
+
 .mb-4px {
   margin-bottom: 4px;
 }
