--- a/src/layouts/Admin/Admin.module.scss
+++ b/src/layouts/Admin/Admin.module.scss
@@ -9,3 +9,8 @@
   background-color: #333;
   max-width: calc(100vw - var(--sidebar-admin-width)) !important;
 }
+
+.content {
+  background-color: var(--admin-bg2);
+  min-height: 100vh;
+}
