call api detailed account

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -16,7 +16,7 @@
   --admin-font-color-hover: #3b82f6;
   --admin-background-color: #3c82f6;
   --admin-bg: #142337;
-  --admin-bg2: #0f1824;
+  --admin-bg2: #5a9aee;
 }
 
 html {
