--- a/src/layouts/CustomerLayout/CustomerLayout.module.scss
+++ b/src/layouts/CustomerLayout/CustomerLayout.module.scss
@@ -1,15 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 .topbar {
   background-color: rgba(0, 0, 0, 0.54) !important;
   margin-bottom: 50px;
   padding-top: 50px;
   padding-bottom: 50px;
+  .title {
+    color: #fff;
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 400;
+    letter-spacing: 2px;
+    margin-bottom: 0px;
+  }
 }
 
-.topbar .title {
-  color: #fff;
-  font-size: 20px;
-  line-height: 26px;
-  font-weight: 400;
-  letter-spacing: 2px;
-  margin-bottom: 0px;
+.container {
+  padding: 0 !important;
+  margin: 0 64px !important;
+}
+
+body {
+  font-family: 'Poppins', sans-serif !important;
+  font-size: 1.4rem;
+  line-height: 1.5;
 }
