--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,6 +1,7 @@
 @import url('normalize.css');
 @import './gridLayout.css';
 @import '../../assets/vendors/themify-icons/themify-icons.css';
+@import './butlerFont.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Yantramanav:wght@100;300;400;500;700;900&display=swap');
 
@@ -11,6 +12,7 @@
 }
 
 :root {
+  --font-butler: 'Butler', sans-serif;
   --font-poppins: 'Poppins', sans-serif;
   --font-yantramanav: 'Yantramanav', sans-serif;
 
