--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -159,8 +159,58 @@ nav {
 
 .category-header-component {
   position: absolute;
+  z-index: 1000;
+
   left: -100px;
   width: 100vw;
   height: 412px;
   background-color: #ccc;
+}
+
+// handle animation
+// .category-header-component {
+//   position: absolute;
+//   left: -110px;
+//   z-index: 1000;
+// }
+
+.category-header-component[opening] {
+  animation: fade-up 0.3s linear forwards;
+}
+
+.category-header-component[closing] {
+  animation: fade-out 0.3s linear forwards;
+}
+
+.category-header-component[display-non] {
+  display: none;
+}
+
+@keyframes fade-up {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+
+  50% {
+    transform: translateY(15px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
 }
